hphp/hack/test/typecheck/function_pointer/class_meth_reified_static.php.exp
File "class_meth_reified_static.php", line 7, characters 5-36:
Invalid function reference. This function requires reified generics. Prefer using a lambda instead. (Typing[4381])
